--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,8 @@ name: test
 on:
   pull_request:
   push:
+    branches:
+      - main
     tags-ignore:
       - 'v*' # Don't run these tests twice when cutting a new version.
 
