--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ mypy = "^0.941"
 black = "^22.1.0"
 isort = "^5.10.1"
 celery = "^5.0.5"
+types-PyYAML = "^6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
